force-app/main/default/objects/OI_Graph_Node__c/OI_Graph_Node__c.object-meta.xml
<CustomObject>
    <label>OI Graph Node</label>
    <pluralLabel>OI Graph Nodes</pluralLabel>
    <nameField>
        <label>Graph Node Name</label>
        <type>AutoNumber</type>
        <displayFormat>NODE-{00000}</displayFormat>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
    <description>Canonical node version table backing the Graph Engine. One row per version, not one row per node (ADR-0014). Generic — carries no Salesforce-specific vocabulary (GraphEngine.md §1-2). Application-internal (ADR-0006).</description>
</CustomObject>