force-app/main/default/objects/OI_Graph_Node__c/fields/Attributes_Json__c.field-meta.xml
<CustomField>
    <fullName>Attributes_Json__c</fullName>
    <label>Attributes Json</label>
    <type>LongTextArea</type>
    <length>131072</length>
    <description>Type-specific attributes as a JSON bag — schemaless by design (GraphEngine.md §2).</description>
</CustomField>