force-app/main/default/objects/OI_Graph_Node__c/fields/Checksum__c.field-meta.xml
<CustomField>
    <fullName>Checksum__c</fullName>
    <label>Checksum</label>
    <type>Text</type>
    <length>64</length>
    <description>Hash of scanner-normalized content for this version — used to decide new-version vs. liveness-touch vs. no-op.</description>
</CustomField>