force-app/main/default/objects/OI_Graph_Node__c/fields/First_Seen_Run__c.field-meta.xml
<CustomField>
    <fullName>First_Seen_Run__c</fullName>
    <label>First Seen Run</label>
    <type>Lookup</type>
    <referenceTo>OI_Scan_Run__c</referenceTo>
    <relationshipName>OI_First_Seen_Nodes</relationshipName>
    <relationshipLabel>OI Graph Nodes (First Seen)</relationshipLabel>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>