force-app/main/default/objects/OI_Graph_Node__c/fields/Graph_Scope__c.field-meta.xml
<CustomField>
    <fullName>Graph_Scope__c</fullName>
    <label>Graph Scope</label>
    <type>Text</type>
    <length>80</length>
    <description>Logical graph partition key; defaults to a single implicit value (GraphEngine.md §4 extension point).</description>
</CustomField>