force-app/main/default/objects/OI_Graph_Node__c/fields/Is_Current__c.field-meta.xml
<CustomField>
    <fullName>Is_Current__c</fullName>
    <label>Is Current</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
    <description>True on exactly one row per Node_Key__c at any time. One of the two narrow exceptions to immutability (GraphEngine.md §2) — flipped in place only by OI_GraphRepository.commitVersion.</description>
</CustomField>