force-app/main/default/objects/OI_Graph_Node__c/fields/Last_Seen_Run__c.field-meta.xml
<CustomField>
    <fullName>Last_Seen_Run__c</fullName>
    <label>Last Seen Run</label>
    <type>Lookup</type>
    <referenceTo>OI_Scan_Run__c</referenceTo>
    <relationshipName>OI_Last_Seen_Nodes</relationshipName>
    <relationshipLabel>OI Graph Nodes (Last Seen)</relationshipLabel>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Updated in place, only on the current row, on a liveness touch — the other narrow exception to immutability.</description>
</CustomField>