force-app/main/default/objects/OI_Graph_Node__c/fields/Node_Key__c.field-meta.xml
<CustomField>
    <fullName>Node_Key__c</fullName>
    <label>Node Key</label>
    <type>Text</type>
    <length>255</length>
    <required>true</required>
    <description>The logical node identity, shared across every version of this node. Domain-assigned. No longer unique on its own under immutable versioning (ADR-0014).</description>
</CustomField>