force-app/main/default/objects/OI_Graph_Node__c/fields/Node_Type__c.field-meta.xml
<CustomField>
    <fullName>Node_Type__c</fullName>
    <label>Node Type</label>
    <type>Text</type>
    <length>80</length>
    <required>true</required>
    <description>Opaque type key (e.g. SalesforceMetadata.Flow), validated against OI_Node_Type_Descriptor__mdt at the Scanner boundary — deliberately Text, not a Picklist (ADR-0011).</description>
</CustomField>