force-app/main/default/objects/OI_Graph_Node__c/fields/Node_Version_Key__c.field-meta.xml
<CustomField>
    <fullName>Node_Version_Key__c</fullName>
    <label>Node Version Key</label>
    <type>Text</type>
    <length>255</length>
    <required>true</required>
    <unique>true</unique>
    <externalId>true</externalId>
    <caseSensitive>true</caseSensitive>
    <description>{Node_Key__c}::v{Version_Number__c} — the actual unique identity of this row. Used for upsert-free, conflict-detecting inserts (GraphRepository.md §15).</description>
</CustomField>