force-app/main/default/objects/OI_Graph_Node__c/fields/Parent_Key__c.field-meta.xml
<CustomField>
    <fullName>Parent_Key__c</fullName>
    <label>Parent Key</label>
    <type>Text</type>
    <length>255</length>
    <description>Opaque reference to another row's Node_Key__c, for component kinds with exactly one natural structural parent. Filter-only — never a FIND-clause target (ADR-0018).</description>
</CustomField>