force-app/main/default/objects/OI_Graph_Node__c/fields/Secondary_Key__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Key__c</fullName>
    <label>Secondary Key</label>
    <type>Text</type>
    <length>255</length>
    <description>Generic alternate identifier, opaque to the engine (e.g. an API name for Salesforce metadata). GraphEngine.md §0 Round 1 — renamed from Api_Name__c.</description>
</CustomField>